WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194057
FloatWithRect has invalid and inaccessible default constructor
https://bugs.webkit.org/show_bug.cgi?id=194057
Summary
FloatWithRect has invalid and inaccessible default constructor
Keith Rollin
Reported
2019-01-30 15:56:35 PST
FloatWithRect has a default constructor declared as 'default'. This constructor is invalid because FloatWithRect has a data member that's a reference that will not get initialized with this constructor. Since its invalid, and since it's private and not accessed by anything, remove this constructor.
Attachments
Patch
(1.78 KB, patch)
2019-01-30 15:58 PST
,
Keith Rollin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-01-30 15:56:53 PST
<
rdar://problem/47685211
>
Keith Rollin
Comment 2
2019-01-30 15:58:27 PST
Created
attachment 360637
[details]
Patch
WebKit Commit Bot
Comment 3
2019-01-30 17:35:32 PST
Comment on
attachment 360637
[details]
Patch Clearing flags on attachment: 360637 Committed
r240744
: <
https://trac.webkit.org/changeset/240744
>
WebKit Commit Bot
Comment 4
2019-01-30 17:35:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug